tests/instantiating/blackbox_size_not_set/stderr.golden
error: 'bb' of type 'blackbox' must have 'size' property set
bus.fbd +2:3
   |
 2 |   bb blackbox
   |   ^^
